// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography - Snapshots > matches snapshot for 2xl size 1`] = `
<p
  class="text-6xl font-bold text-foreground"
  data-testid="typography"
>
  2XL text
</p>
`;

exports[`Typography - Snapshots > matches snapshot for em element 1`] = `
<em
  class="text-base font-medium text-foreground"
  data-testid="typography"
>
  Emphasized text
</em>
`;

exports[`Typography - Snapshots > matches snapshot for extra large size 1`] = `
<p
  class="text-4xl font-bold text-foreground"
  data-testid="typography"
>
  Extra large text
</p>
`;

exports[`Typography - Snapshots > matches snapshot for extra small size 1`] = `
<p
  class="text-xs font-medium text-foreground"
  data-testid="typography"
>
  Extra small text
</p>
`;

exports[`Typography - Snapshots > matches snapshot for h1 element 1`] = `
<h1
  class="text-base font-medium text-foreground"
  data-testid="typography"
>
  H1 heading
</h1>
`;

exports[`Typography - Snapshots > matches snapshot for h2 element 1`] = `
<h2
  class="text-base font-medium text-foreground"
  data-testid="typography"
>
  H2 heading
</h2>
`;

exports[`Typography - Snapshots > matches snapshot for large size 1`] = `
<p
  class="text-2xl font-bold text-foreground"
  data-testid="typography"
>
  Large text
</p>
`;

exports[`Typography - Snapshots > matches snapshot for medium size 1`] = `
<p
  class="text-base font-medium text-foreground"
  data-testid="typography"
>
  Medium text
</p>
`;

exports[`Typography - Snapshots > matches snapshot for small size 1`] = `
<p
  class="text-sm font-medium text-foreground"
  data-testid="typography"
>
  Small text
</p>
`;

exports[`Typography - Snapshots > matches snapshot for span element 1`] = `
<span
  class="text-base font-medium text-foreground"
  data-testid="typography"
>
  Span text
</span>
`;

exports[`Typography - Snapshots > matches snapshot for strong element 1`] = `
<strong
  class="text-base font-medium text-foreground"
  data-testid="typography"
>
  Strong text
</strong>
`;

exports[`Typography - Snapshots > matches snapshot with combined props 1`] = `
<h2
  class="text-2xl font-bold text-foreground"
  data-testid="typography"
>
  Large heading
</h2>
`;

exports[`Typography - Snapshots > matches snapshot with complex children 1`] = `
<p
  class="text-base font-medium text-foreground"
  data-testid="typography"
>
  <span>
    Complex
  </span>
   
  <em>
    typography
  </em>
   content
</p>
`;

exports[`Typography - Snapshots > matches snapshot with custom className 1`] = `
<p
  class="text-base font-medium text-foreground custom-typography"
  data-testid="typography"
>
  Custom typography
</p>
`;

exports[`Typography - Snapshots > matches snapshot with data-testid prop 1`] = `
<p
  class="text-base font-medium text-foreground"
  data-testid="custom-typography"
>
  Typography with test ID
</p>
`;

exports[`Typography - Snapshots > matches snapshot with default props 1`] = `
<p
  class="text-base font-medium text-foreground"
  data-testid="typography"
>
  Default text
</p>
`;

exports[`Typography - Snapshots > matches snapshot with id prop 1`] = `
<p
  class="text-base font-medium text-foreground"
  data-testid="typography"
  id="typography-id"
>
  Typography with ID
</p>
`;
